--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+* cllist-1.0.3 - Jun 18 2017
+
+- Some cleanups in the build process
+
+
 * cllist-1.0 - Apr 12 2017
 
   Forked from python-llist to python-cllist
